# vecgraph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  devenv.nix  dist-workspace.toml
crates/vecgraph/: Cargo.toml  README.md
crates/vecgraph-bin/: Cargo.toml  README.md
crates/vecgraph-bin/src/: main.rs
crates/vecgraph-client/: Cargo.toml  README.md
crates/vecgraph-client/src/: config.rs  lib.rs  remote.rs
crates/vecgraph-core/: Cargo.toml  README.md
crates/vecgraph-core/src/: edge.rs  error.rs  graph.rs  keys.rs  lib.rs  node.rs  search.rs
crates/vecgraph-core/src/traits/: embedder.rs  enricher.rs  mod.rs
crates/vecgraph-embed-model2vec/: Cargo.toml  README.md
crates/vecgraph-embed-model2vec/src/: lib.rs  model2vec_embedder.rs
crates/vecgraph-embed-onnx/: Cargo.toml  README.md
crates/vecgraph-embed-onnx/src/: lib.rs  onnx_embedder.rs  settings.rs
crates/vecgraph-enrich-llm/: Cargo.toml
crates/vecgraph-enrich-llm/src/: lib.rs
crates/vecgraph-proto/: Cargo.toml  README.md  build.rs
crates/vecgraph-proto/proto/: graphstore.proto
crates/vecgraph-proto/src/: lib.rs
crates/vecgraph-proto/src/traits/: edge_traits.rs  mod.rs  node_traits.rs  search_impl.rs
crates/vecgraph-server/: Cargo.toml  README.md
crates/vecgraph-server/src/: lib.rs  server.rs
crates/vecgraph-store/: Cargo.toml  README.md
crates/vecgraph-store/src/: edge_ops.rs  lib.rs  node_ops.rs  search_ops.rs  store.rs
crates/vecgraph/examples/: basic.rs  client.rs  model2vec_basic.rs
crates/vecgraph/src/: lib.rs
