[workspace]
resolver = "2"
members = [
    "crates/vecgraph",
    "crates/vecgraph-core",
    "crates/vecgraph-server",
    "crates/vecgraph-store",
    "crates/vecgraph-embed-model2vec",
    "crates/vecgraph-embed-onnx",
    "crates/vecgraph-proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RyeBread <info@rye.moe>"]
license = "MIT"
repository = "https://github.com/ryebreadgit/vecgraph"

[workspace.dependencies]
# Internal
vecgraph = { path = "crates/vecgraph", version = "0.1.0"  }
vecgraph-core = { path = "crates/vecgraph-core", version = "0.1.0"  }
vecgraph-server = { path = "crates/vecgraph-server", version = "0.1.0"  }
vecgraph-store = { path = "crates/vecgraph-store", version = "0.1.0"  }
vecgraph-embed-model2vec = { path = "crates/vecgraph-embed-model2vec", version = "0.1.0"  }
vecgraph-embed-onnx = { path = "crates/vecgraph-embed-onnx", version = "0.1.0"  }
vecgraph-proto = { path = "crates/vecgraph-proto", version = "0.1.0"  }

# External
kvwrap = "0.1.1"
bytemuck = "1.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "copy-dylibs", "ndarray", "std", "tls-rustls"] }
ndarray = "0.17"
tokenizers = "0.22"
thiserror = "2"
async-trait = "0.1"
model2vec-rs = "0.1"
pollster = "0.4.0"
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true