[workspace]
resolver = "2"
members = [
    "crates/vecgraph",
    "crates/vecgraph-bin",
    "crates/vecgraph-core",
    "crates/vecgraph-client",
    "crates/vecgraph-server",
    "crates/vecgraph-store",
    "crates/vecgraph-embed-model2vec",
    "crates/vecgraph-embed-onnx",
    "crates/vecgraph-proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RyeBread <info@rye.moe>"]
license = "MIT"
repository = "https://github.com/ryebreadgit/vecgraph"

[workspace.dependencies]
# Internal
vecgraph = { path = "crates/vecgraph", version = "0.1.0"  }
vecgraph-core = { path = "crates/vecgraph-core", version = "0.1.0", default-features = false  }
vecgraph-client = { path = "crates/vecgraph-client", version = "0.1.0"  }
vecgraph-server = { path = "crates/vecgraph-server", version = "0.1.0"  }
vecgraph-store = { path = "crates/vecgraph-store", version = "0.1.0"  }
vecgraph-embed-model2vec = { path = "crates/vecgraph-embed-model2vec", version = "0.1.0"  }
vecgraph-embed-onnx = { path = "crates/vecgraph-embed-onnx", version = "0.1.0"  }
vecgraph-proto = { path = "crates/vecgraph-proto", version = "0.1.0"  }

# External
kvwrap = { version = "0.1.1", features = ["client"] }
bytemuck = "1.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "copy-dylibs", "ndarray", "std", "tls-rustls"] }
ndarray = "0.17"
tokenizers = "0.22"
thiserror = "2"
async-trait = "0.1"
async-compat = "0.2"
model2vec-rs = "0.1"
pollster = "0.4.0"
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.6", features = ["derive", "env"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true