[package]
name = "vecgraph-core"
description = "Core traits and utilities for vecgraph."
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true