[package]
name = "vecgraph-embed-model2vec"
description = "Model2Vec embedding module for vecgraph"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecgraph-core.workspace = true
model2vec-rs.workspace = true

[package.metadata.dist]
dist = false