[package]
name = "vecgraph-enrich-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
vecgraph-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
minreq.workspace = true