[package]
name = "vecgraph-proto"
description = "Protobuf definitions for vecgraph's gRPC API."
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecgraph-core = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tonic-prost-build", "prost", "serde", "tonic-prost"]
