[package]
name = "vecgraph-server"
description = "Server capabilities for vecgraph, including gRPC server implementation and related utilities."
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecgraph-core = { workspace = true }
vecgraph-proto = { workspace = true }
kvwrap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }