[package]
name = "vecgraph"
version.workspace = true
edition.workspace = true
description = "Fast and efficient vector graph database built on top of kvwrap."

[features]
default = []
embed-onnx = ["dep:vecgraph-embed-onnx"]
full = ["embed-onnx"]

[dependencies]
vecgraph-core.workspace = true
vecgraph-store.workspace = true
vecgraph-embed-onnx = { workspace = true, optional = true }