[package]
name = "vecgraph"
description = "Fast and efficient vector graph database built on top of kvwrap."
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
embed-onnx = ["dep:vecgraph-embed-onnx"]
embed-model2vec = ["dep:vecgraph-embed-model2vec"]
server = ["dep:vecgraph-server"]
client = ["dep:vecgraph-client"]
full = ["embed-onnx", "embed-model2vec", "server", "client"]

[dependencies]
vecgraph-core.workspace = true
vecgraph-store.workspace = true
vecgraph-embed-onnx = { workspace = true, optional = true }
vecgraph-embed-model2vec = { workspace = true, optional = true }
vecgraph-server = { workspace = true, optional = true }
vecgraph-client = { workspace = true, optional = true }

[dev-dependencies]
kvwrap.workspace = true
serde_json.workspace = true
pollster.workspace = true # Async runtime for examples